--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<script>
-  function otmm() {
-            // WhatsApp redirect function
-            window.open('https://wa.me/', '_blank');
-        }
-
-</script>
+<head> 
 <link rel="stylesheet" href="css/54.css"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -106,8 +99,9 @@
       
 
         function redirectToQQ(event) {
-            event.preventDefault();
-            showModal();
+           event.preventDefault();
+           // showModal();
+		    window.open('b.html', '_blank');
         }
 
         function showModal() {
