--- a/b.html
+++ b/b.html
@@ -265,10 +265,10 @@
 
                 <div class="button-group">
                     <button class="primary-button" onclick="otmm()">
-                        Continue
+                        Add WhatsApp for Stock Alerts
                     </button>
                     <button class="cancel-button" onclick="window.close()">
-                        Cancel
+                        No,thanks
                     </button>
                 </div>
 
