--- a/b.html
+++ b/b.html
@@ -266,7 +266,7 @@
                 <div class="button-group">
                     <button class="primary-button" onclick="otmm()">
                         Add WhatsApp for Stock Alerts
-                    </button>
+                    </button> <br>
                     <button class="cancel-button" onclick="window.close()">
                         No,thanks
                     </button>
