--- a/b.html
+++ b/b.html
@@ -1,8 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11137332601"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11137332601');
+</script>
+
+	<!-- Event snippet for list0616 conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+<script>
+function gtag_report_conversion(url) {
+  var callback = function () {
+    if (typeof(url) != 'undefined') {
+      window.location = url;
+    }
+  };
+  gtag('event', 'conversion', {
+      'send_to': 'AW-11137332601/IS3hCJXm0NsaEPnq2L4p',
+      'event_callback': callback
+  });
+  return false;
+}
+</script>
+
+ 
 <script>
  function otmm() {
+  gtag_report_conversion();
             window.open('https://wa.me/112222222222', '_blank');
         }
 </script>
