--- a/b.html
+++ b/b.html
@@ -32,8 +32,7 @@ function gtag_report_conversion(url) {
  
 <script>
  function otmm() {
-  gtag_report_conversion();
-            window.open('https://wa.me/112222222222', '_blank');
+  gtag_report_conversion('https://wa.me/112222222222'); 
         }
 </script>
     <meta charset="UTF-8">
