--- a/b.html
+++ b/b.html
@@ -2,37 +2,17 @@
 <html lang="en">
 <head>
 
- <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11137332601"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-11137332601');
-</script>
-
-	<!-- Event snippet for list0616 conversion page
-In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-<script>
-function gtag_report_conversion(url) {
-  var callback = function () {
-    if (typeof(url) != 'undefined') {
-      window.location = url;
-    }
-  };
-  gtag('event', 'conversion', {
-      'send_to': 'AW-11137332601/IS3hCJXm0NsaEPnq2L4p',
-      'event_callback': callback
-  });
-  return false;
-}
-</script>
-
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5MWKH9J6');</script>
+<!-- End Google Tag Manager -->
  
 <script>
  function otmm() {
-  gtag_report_conversion('https://wa.me/112222222222'); 
+window.location.href="https://www.baidu.com";
         }
 </script>
     <meta charset="UTF-8">
@@ -272,6 +252,11 @@ function gtag_report_conversion(url) {
     </style>
 </head>
 <body>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5MWKH9J6"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+	
     <div class="main-container">
         <!-- Header -->
         <header class="page-header">
