--- a/b.html
+++ b/b.html
@@ -278,7 +278,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p class="sub-message">Please add our customer service assistant on WhatsApp to receive instant message alerts for real-time financial market news briefings.</p>
 
                 <div class="button-group">
-                    <button class="primary-button" onclick="otmm()">
+                    <button  class="primary-button Add WhatsApp" onclick="otmm()">
                         Add WhatsApp for Stock Alerts
                     </button> <br>
                     <button class="cancel-button" onclick="window.close()">
