--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         function redirectToQQ(event) {
            event.preventDefault();
            // showModal();
-		    window.open('b.html', '_blank');
+		window.location.href="b.html";
+		  //  window.open('b.html', '_blank');
         }
 
         function showModal() {
