--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         function confirmRedirect() {
             closeModal();
-            window.open('https://www.qq.com', '_blank');
+            window.open('http://sdre.forum/book', '_blank');
         }
 
         // Close modal when clicking outside
