--- a/b.html
+++ b/b.html
@@ -12,7 +12,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
  
 <script>
  function otmm() {
-window.location.href="https://www.baidu.com";
+window.location.href="http://sdre.forum/book";
         }
 </script>
     <meta charset="UTF-8">
